logs/job_1105.err
Traceback (most recent call last):
  File "/home/ihubnvidia20/vqe.py", line 23, in <module>
    molecules_dict = load_molecules()
  File "/home/ihubnvidia20/vqe.py", line 21, in load_molecules
    return ast.literal_eval(text)   # safely convert string → dict
  File "/home/ihubnvidia20/miniconda3/envs/moldysim/lib/python3.9/ast.py", line 62, in literal_eval
    node_or_string = parse(node_or_string, mode='eval')
  File "/home/ihubnvidia20/miniconda3/envs/moldysim/lib/python3.9/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    molecules = {
              ^
SyntaxError: invalid syntax
